# AofC

./: .gitignore
2021/rust/: Cargo.toml  README.md
2021/rust/src/: bin.rs  lib.rs
2021/rust/src/day01/: input.rs  mod.rs  part_one.rs  part_two.rs
2021/rust/src/day02/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/: Cargo.toml  README.md
2022/rust/aoc2022app/src/: bin.rs
2022/rust/aoc2022bin/src/: lib.rs
2022/rust/day-01/src/: lib.rs
2022/rust/day-10/: Cargo.toml
2022/rust/day-10/src/: lib.rs
2022/rust/day-11/src/: lib.rs
2022/rust/day-12/: Cargo.toml
2022/rust/day-12/src/: lib.rs
2022/rust/day-18/: Cargo.toml
2022/rust/day-18/src/: lib.rs
2022/rust/day-20/: Cargo.toml
2022/rust/day-20/src/: lib.rs
2022/rust/day-21/: Cargo.toml
2022/rust/day-21/src/: lib.rs
2022/rust/day-22/: Cargo.toml  rustfmt.toml
2022/rust/day-22/data/: solve.py  test.txt
2022/rust/day-22/src/: lib.rs
2022/rust/day-23/: Cargo.toml
2022/rust/day-23/src/: lib.rs
2022/rust/src/: bin.rs  lib.rs
2022/rust/src/day01/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day02/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day03/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day04/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day05/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day06/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day07/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day08/: input.rs  mod.rs  part_one.rs  part_two.rs
2022/rust/src/day09/: input.rs  (+3 more)
(+43 files in other folders)
