[package]
name = "aoc_2022_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
 name = "aoc2021lib"
 path = "src/lib.rs"

 [[bin]]
 name = "aoc2021bin"
 path = "src/bin.rs"

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
enum-utils = "0.1.2"
strum_macros = "0.24.3"
