[package]
name = "aoc_2022_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
 name = "aoc2022lib"
 path = "src/lib.rs"

 [[bin]]
 name = "aoc2022bin"
 path = "src/bin.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
nom = "7.1.1"
