[package]
name = "day-20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
nom = "7.1.1"
pathfinding = "4.1.1"
rayon = "1.6.1"
ringbuf = "0.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
